--- a/package.json
+++ b/package.json
@@ -1,25 +1,15 @@
 {
-  "name": "blog_nextJS",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "blog",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/phungngochuyhoang/blog_nextJS.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/phungngochuyhoang/blog_nextJS/issues"
-  },
-  "homepage": "https://github.com/phungngochuyhoang/blog_nextJS#readme",
   "dependencies": {
-    "next": "^10.1.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "next": "10.1.3",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   }
 }
